local/logs/project.log
2019-02-26T12:57:17.052Z - normal: Load ~/.CocosCreator/settings.json
2019-02-26T12:57:18.520Z - normal: Initializing Asset Database
2019-02-26T12:57:18.523Z - normal: checking language setting...
2019-02-26T12:57:18.523Z - normal: Language: zh
2019-02-26T12:57:20.588Z - success: preview server running at http://localhost:7456
2019-02-26T12:57:20.592Z - success: protocol editor-framework registered
2019-02-26T12:57:20.593Z - success: protocol app registered
2019-02-26T12:57:20.593Z - success: protocol theme registered
2019-02-26T12:57:20.593Z - success: protocol packages registered
2019-02-26T12:57:20.593Z - success: protocol uuid registerred
2019-02-26T12:57:20.593Z - success: protocol db registerred
2019-02-26T12:57:20.593Z - success: protocol thumbnail registerred
2019-02-26T12:57:20.593Z - success: protocol unpack registerred
2019-02-26T12:57:20.594Z - success: protocol disable-commonjs registerred
2019-02-26T12:57:20.852Z - normal: connected!
2019-02-26T12:57:20.853Z - normal: Check project F:\ZS\Space\CocosProjects\SlideGame
2019-02-26T12:57:20.854Z - normal: Initializing project F:\ZS\Space\CocosProjects\SlideGame
2019-02-26T12:57:22.405Z - normal: Initializing Cocos2d
2019-02-26T12:57:24.167Z - normal: Initializing engine extends
2019-02-26T12:57:24.332Z - success: asset-db-debugger loaded
2019-02-26T12:57:24.334Z - success: code-editor loaded
2019-02-26T12:57:24.335Z - success: color-picker loaded
2019-02-26T12:57:24.504Z - success: fb-audience-network loaded
2019-02-26T12:57:24.576Z - success: fb-live-stream loaded
2019-02-26T12:57:24.580Z - success: google-play-instant loaded
2019-02-26T12:57:24.594Z - success: huawei-runtime loaded
2019-02-26T12:57:24.595Z - success: jsb-adapter loaded
2019-02-26T12:57:24.599Z - success: oppo-runtime loaded
2019-02-26T12:57:24.602Z - success: package-manager loaded
2019-02-26T12:57:24.944Z - success: qqplay-adapter loaded
2019-02-26T12:57:24.951Z - success: runtime-dev-tools loaded
2019-02-26T12:57:24.963Z - success: sdkbox loaded
2019-02-26T12:57:24.967Z - success: tester loaded
2019-02-26T12:57:24.968Z - success: ui-grid loaded
2019-02-26T12:57:24.977Z - success: ui-kit-preview-extra loaded
2019-02-26T12:57:24.979Z - success: ui-kit-preview loaded
2019-02-26T12:57:24.980Z - success: ui-kit loaded
2019-02-26T12:57:24.982Z - success: ui-tree loaded
2019-02-26T12:57:24.985Z - success: vivo-runtime loaded
2019-02-26T12:57:24.986Z - success: weapp-adapter loaded
2019-02-26T12:57:25.057Z - success: assets loaded
2019-02-26T12:57:25.059Z - success: builder loaded
2019-02-26T12:57:25.535Z - success: cocos-services loaded
2019-02-26T12:57:25.539Z - success: console loaded
2019-02-26T12:57:25.578Z - success: fb-instant-games loaded
2019-02-26T12:57:25.581Z - success: google-instant-games loaded
2019-02-26T12:57:25.586Z - success: hierarchy loaded
2019-02-26T12:57:25.589Z - success: inspector loaded
2019-02-26T12:57:25.590Z - success: keystore loaded
2019-02-26T12:57:25.593Z - success: node-library loaded
2019-02-26T12:57:25.603Z - success: package-asset loaded
2019-02-26T12:57:25.604Z - success: preferences loaded
2019-02-26T12:57:25.605Z - success: project-exporter loaded
2019-02-26T12:57:25.607Z - success: project-importer loaded
2019-02-26T12:57:25.608Z - success: project-settings loaded
2019-02-26T12:57:25.613Z - success: scene loaded
2019-02-26T12:57:25.615Z - success: simulator-debugger loaded
2019-02-26T12:57:25.616Z - success: sprite-editor loaded
2019-02-26T12:57:25.619Z - success: store loaded
2019-02-26T12:57:25.622Z - success: timeline loaded
2019-02-26T12:57:27.790Z - failed: [db-task][init] Failed to import asset F:\ZS\Space\CocosProjects\SlideGame\assets\scripts\CardNode.js, message: Compile error: SyntaxError: F:/ZS/Space/CocosProjects/SlideGame/assets/scripts/CardNode.js: Unexpected token, expected , (9:16)
   7 |     name = "CardNode",
   8 |     properties: {
>  9 |         node: cc.Node,
     |                 ^
  10 |         type: 0,
  11 |         num: 0,
  12 |         index: null
    at Parser.pp$5.raise (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2019-02-26T12:57:27.801Z - failed: [db-task][init] Failed to import asset F:\ZS\Space\CocosProjects\SlideGame\assets\scripts\manager\CardManager.js, message: Compile error: SyntaxError: F:/ZS/Space/CocosProjects/SlideGame/assets/scripts/manager/CardManager.js: Unexpected token, expected , (34:4)
  32 |         // }
  33 |     }
> 34 |     start () {
     |     ^
  35 | 
  36 |     },
  37 | });
    at Parser.pp$5.raise (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\WorkSofts\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2019-02-26T12:57:30.926Z - normal: Loading packages
2019-02-26T12:57:30.933Z - normal: Watching packages
2019-02-26T12:57:31.532Z - normal: Run Application
2019-02-26T12:57:36.153Z - info: Cocos Services load base data!
2019-02-26T12:57:40.019Z - warn: Please change the definition of property 'audioList' in class 'AudioManager'. Starting from v1.10,
properties in CCClass can not be abbreviated if they are of type RawAsset.
Please use the complete form.
For example, if property is Texture2D's url array, the previous definition is:
    audioList: [cc.Texture2D],
Now it should be changed to:
    audioList: {
      type: cc.Texture2D, // use 'type:' to define an array of Texture2D objects
      default: []
    },
(This helps us to successfully refactor all RawAssets at v2.0, sorry for the inconvenience. 😰 )
2019-02-26T12:57:40.096Z - warn: Script attached to "CardNode" in scene "MainGame.fire" is missing or invalid. Detailed information:
Node path: "Canvas/Center/Content/CardNode"
Asset url: "db://assets/scenes/MainGame.fire"
Script UUID: "5b66fc31-ec11-4c4b-9449-fd7fed324877"
Class ID: "5b66fwx7BFMS5RJ/X/tMkh3"

2019-02-26T12:57:45.028Z - info: shutdown preview server
